[tool.poetry]
name = "alanp"
version = "0.1.0"
description = ""
authors = ["aYour Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
dataclasses = { version = "0.8", python = "~3.6" }

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"
pytest = "*"
flake8 = "*"
black = { version = "*", allow-prereleases = true }
flake8-black = "*"
mypy = "*"
types-dataclasses = "^0.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
