[tool.poetry]
name = "lmparser"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
black = "^22.3.0"
flake8-black = "^0.3.3"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
